docs/translation/4.1.0/vertx-junit5/java/index.adoc
= Vert.x Junit 5 整合

本模块提供了用 JUnit 5 编写Vert.x测试的相关整合以及支持。

[[_use_it_in_your_build]]
== 在您的构建脚本中使用它

* `groupId`: `io.vertx`
* `artifactId`: `vertx-junit5`
* `version`: (current Vert.x release or SNAPSHOT)

[[_why_testing_asynchronous_code_is_different]]
== 为什么测试异步代码与平常不同

测试异步操作需要比JUnit之类的测试工具更多的工具。
让我们考虑一个典型的例子，用Vert.x创建HTTP服务，并将它放入Junit测试：

[source,java]
----
@ExtendWith(VertxExtension.class)
class ATest {
  Vertx vertx = Vertx.vertx();

  @Test
  void start_server() {
    vertx.createHttpServer()
      .requestHandler(req -> req.response().end("Ok"))
      .listen(16969, ar -> {
        //（在此处检查服务是否已经启动）
      });
  }
}
----

这里会有一些问题，因为HTTP服务是异步创建的， `listen` 方法并不阻塞。
我们不能按常规方式来断定在 `listen` 方法返回之后，服务就成功启动了。
况且：

1. 传到 `listen` 的回调函数是在 Vert.x event loop 线程上运行的，而不是在执行Junit 测试的线程上运行的，此外
2. 调用 `listen` 方法之后，单元测试就退出了，并且已经被认为执行成功，此时HTTP服务有可能并没有启动完毕，而且
3. 因为 `listen` 中的回调函数不是运行于单元测试线程上，而是运行于另一线程，所以类似于断言失败等等任何异常都不会被Junit执行器捕获到。

[[_a_test_context_for_asynchronous_executions]]
== 异步执行过程的测试上下文

首先对该模块有贡献的是 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html[VertxTestContext]` 对象：

1. 允许等待其他线程中正在执行的操作，从而触发完成事件。
2. 支持接收失败断言用以标记单元测试失败。

这是一个很基础的用法：

[source,java]
----
@ExtendWith(VertxExtension.class)
class BTest {
  Vertx vertx = Vertx.vertx();

  @Test
  void start_http_server() throws Throwable {
    VertxTestContext testContext = new VertxTestContext();

    vertx.createHttpServer()
      .requestHandler(req -> req.response().end())
      .listen(16969)
      .onComplete(testContext.succeedingThenComplete()); // <1>

    assertThat(testContext.awaitCompletion(5, TimeUnit.SECONDS)).isTrue(); // <2>
    if (testContext.failed()) {  // <3>
      throw testContext.causeOfFailure();
    }
  }
}
----
<1> `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#succeedingThenComplete--[succeedingThenComplete]` 返回一个异步结果处理器，该处理器期望成功结果并使 test context 通过。
<2> `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#awaitCompletion-long-java.util.concurrent.TimeUnit-[awaitCompletion]` 具有 `java.util.concurrent.CountDownLatch` 的语义，并且，如果测试通过之前超时了，会返回 `false` 值。
<3> 如果 context 捕获到了一个错误（潜在的异步错误），那么在测试完成之后，我们必须抛出该异常并让测试用例失败。

[[_use_any_assertion_library]]
== 使用其他任何断言库

本模块并不要求您使用特定的断言库。
您可以使用原始的JUnit断言、 http://joel-costigliola.github.io/assertj/[AssertJ] 、等等。

想要在异步代码当中做断言并确定 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html[VertxTestContext]` 已被潜在失败所通知， 那么您需要将他们包装到 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#verify-io.vertx.junit5.VertxTestContext.ExecutionBlock-[verify]` 、 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#succeeding-io.vertx.core.Handler-[succeeding]` 或者 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#failing-io.vertx.core.Handler-[failing]` 当中：

[source,java]
----
HttpClient client = vertx.createHttpClient();

client.request(HttpMethod.GET, 8080, "localhost", "/")
  .compose(req -> req.send().compose(HttpClientResponse::body))
  .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
    assertThat(buffer.toString()).isEqualTo("Plop");
    testContext.completeNow();
  })));
----

`link:../../apidocs/io/vertx/junit5/VertxTestContext.html[VertxTestContext]` 中有用的方法列举如下：

* `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#completeNow--[completeNow]` 和 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#failNow-java.lang.Throwable-[failNow]` 用于通知成功或失败。
* `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#succeedingThenComplete--[succeedingThenComplete]` 用来提供 `Handler<AsyncResult<T>>` 处理器，该处理器期望得到成功结果并完成 test context。
* `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#failingThenComplete--[failingThenComplete]` 提供一个 `Handler<AsyncResult<T>>` 处理器，该处理器期望得到失败结果并完成 test context。
* `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#succeeding--[succeeding]` 用来提供 `Handler<AsyncResult<T>>` 处理器，该处理器期望成功结果并将该结果传到下一个回调函数中，该过程中从回调函数抛出任何异常都会被认为测试用例失败。
* `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#failing--[failing]` 用来提供 `Handler<AsyncResult<T>>` 处理器 ，该处理器期望一个失败结果，并将异常传入下一个回调函数中，该过程中从回调函数抛出任何异常都会被认为测试用例失败。
* `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#verify-io.vertx.junit5.VertxTestContext.ExecutionBlock-[verify]` 提供断言功能，代码块中抛出的任何异常都被认为测试用例失败。

WARNING: 与 `succeedingThenComplete` 和 `failingThenComplete` 不同，调用 `succeeding` 或 `failing` 方法只能让测试用例失败（例如，`succeeding` 获取到了失败的异步结果）。
如果想让测试用例通过，您仍然需要调用 `completeNow` ，或者使用下述的 checkpoints 。

[[_checkpoint_when_there_are_multiple_success_conditions]]
== 有多个成功条件的Checkpoint

在一些特定的执行点调用 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#completeNow--[completeNow]` 可以轻松的将许多测试标记为通过。
也就是说基于不同的异步结果，一个测试用例在很多种情况下都可以视为成功。

You can use checkpoints to flag some execution points to be passed.
您可以用 checkpoint 以标记某些执行点为通过。
一个 `link:../../apidocs/io/vertx/junit5/Checkpoint.html[Checkpoint]` 可以由单个标记或多个标记来控制。
当所有的checkpoint被标记后， `link:../../apidocs/io/vertx/junit5/VertxTestContext.html[VertxTestContext]` 将通过测试用例。

以下是一个结合checkpoint启动HTTP服务、创建10个HTTP客户端请求并响应10个HTTP请求的示例：

[source,java]
----
Checkpoint serverStarted = testContext.checkpoint();
Checkpoint requestsServed = testContext.checkpoint(10);
Checkpoint responsesReceived = testContext.checkpoint(10);

vertx.createHttpServer()
  .requestHandler(req -> {
    req.response().end("Ok");
    requestsServed.flag();
  })
  .listen(8888)
  .onComplete(testContext.succeeding(httpServer -> {
    serverStarted.flag();

    HttpClient client = vertx.createHttpClient();
    for (int i = 0; i < 10; i++) {
      client.request(HttpMethod.GET, 8888, "localhost", "/")
        .compose(req -> req.send().compose(HttpClientResponse::body))
        .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
          assertThat(buffer.toString()).isEqualTo("Ok");
          responsesReceived.flag();
        })));
    }
  }));
----

TIP: checkpoint只能在测试用例的主线程创建，不能在Vert.x异步事件回调中创建。

[[_integration_with_junit_5]]
== 整合JUnit 5

Junit 5 相比于之前的版本，它提供了一个不同的模型。

[[_test_methods]]
=== 测试方法

与Vert.x 的整合主要受益于 `link:../../apidocs/io/vertx/junit5/VertxExtension.html[VertxExtension]` 类，并使用注入的测试参数： `Vertx` 和 `VertxTestContext` ：

[source,java]
----
@ExtendWith(VertxExtension.class)
class SomeTest {

  @Test
  void some_test(Vertx vertx, VertxTestContext testContext) {
    // (...)
  }
}
----

NOTE: `Vertx` 实例默认配置下并非集群模式。如果您需要做一些其他事情，那么请不要使用注入的 `Vertx` 参数，需要您自己提供 `Vertx` 对象。

测试用例会被自动的包装到 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html[VertxTestContext]` 生命周期，所以您无需自行注入 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html#awaitCompletion-long-java.util.concurrent.TimeUnit-[awaitCompletion]` ：

[source,java]
----
@ExtendWith(VertxExtension.class)
class SomeTest {

  @Test
  void http_server_check_response(Vertx vertx, VertxTestContext testContext) {
    vertx.deployVerticle(new HttpServerVerticle(), testContext.succeeding(id -> {
      HttpClient client = vertx.createHttpClient();
      client.request(HttpMethod.GET, 8080, "localhost", "/")
        .compose(req -> req.send().compose(HttpClientResponse::body))
        .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
          assertThat(buffer.toString()).isEqualTo("Plop");
          testContext.completeNow();
        })));
    }));
  }
}
----

您可以结合Junit注解（例如 `@RepeatedTest` 或者其他生命周期回调注解）来使用本模块：

[source,java]
----
@ExtendWith(VertxExtension.class)
class SomeTest {

  // 部署Verticle 并在部署成功之后
  // 执行测试用例方法
  @BeforeEach
  void deploy_verticle(Vertx vertx, VertxTestContext testContext) {
    vertx.deployVerticle(new HttpServerVerticle(), testContext.succeedingThenComplete());
  }

  // 重复测试3次
  @RepeatedTest(3)
  void http_server_check_response(Vertx vertx, VertxTestContext testContext) {
    HttpClient client = vertx.createHttpClient();
    client.request(HttpMethod.GET, 8080, "localhost", "/")
      .compose(req -> req.send().compose(HttpClientResponse::body))
      .onComplete(testContext.succeeding(buffer -> testContext.verify(() -> {
        assertThat(buffer.toString()).isEqualTo("Plop");
        testContext.completeNow();
      })));
  }
}
----

也可以用在测试类或者测试方法上加  `link:../../apidocs/io/vertx/junit5/Timeout.html[@Timeout]` 注解来自定义 `link:../../apidocs/io/vertx/junit5/VertxTestContext.html[VertxTestContext]` 的超时时间：

[source,java]
----
@ExtendWith(VertxExtension.class)
class SomeTest {

  @Test
  @Timeout(value = 10, timeUnit = TimeUnit.SECONDS)
  void some_test(Vertx vertx, VertxTestContext context) {
    // (...)
  }
}
----

[[_lifecycle_methods]]
=== 生命周期函数

JUnit 5 提供了几个注解用于用户定义的生命周期函数，他们分别是 `@BeforeAll` ， `@BeforeEach` ， `@AfterEach` 和 `@AfterAll` 。

这些方法可以注入 `Vertx` 对象。
通过这种做法，它们才可能用 `Vertx` 对象执行异步操作，所以它们也可以注入 `VertxTestContext` 对象来保证JUnit执行器等待测试方法执行完毕，并报告执行结果或错误结果。

以下是一个示例：

[source,java]
----
@ExtendWith(VertxExtension.class)
class LifecycleExampleTest {

  @BeforeEach
  @DisplayName("Deploy a verticle")
  void prepare(Vertx vertx, VertxTestContext testContext) {
    vertx.deployVerticle(new SomeVerticle(), testContext.succeedingThenComplete());
  }

  @Test
  @DisplayName("A first test")
  void foo(Vertx vertx, VertxTestContext testContext) {
    // (...)
    testContext.completeNow();
  }

  @Test
  @DisplayName("A second test")
  void bar(Vertx vertx, VertxTestContext testContext) {
    // (...)
    testContext.completeNow();
  }

  @AfterEach
  @DisplayName("Check that the verticle is still there")
  void lastChecks(Vertx vertx) {
    assertThat(vertx.deploymentIDs())
      .isNotEmpty()
      .hasSize(1);
  }
}
----

[[_scope_of_vertextestcontext_objects]]
==== `VertxTestContext` 对象的作用范围

因为这些对象都协助等待 _异步操作_ 执行结束，所以调用任何 `@Test` ， `@BeforeAll` ， `@BeforeEach` ， `@AfterEach` 和 `@AfterAll` 修饰的方法时都会随之创建一个新的 `VertxTestContext` 对象。

[[_scope_of_vertx_objects]]
==== `Vertx` 对象的作用范围

`Vertx` 对象的作用范围取决于声明周期函数在 http://junit.org/junit5/docs/current/user-guide/#extensions-execution-order[JUnit中相对执行顺序] 里第一个创建 `Vertx` 的那个方法。一般来说，我们遵循JUnit扩展作用范围规则，
但是这里有一些规范。

1. 如果一个父级test context已经持有一个 `Vertx` 对象， 那么该 `Vertx` 对象在子级扩展的test context中会被复用。
2. 在 `@BeforeAll` 修饰的方法中注入的 `Vertx` 对象，会在之后所有的测试方法以及生命周期函数中注入的 `Vertx` 参数当中共享。
3. 在 `@BeforeEach` 修饰的且没有父级context的方法注入过程中，或者在先前的 `@BeforeAll` 方法的参数注入过程中，会创建一个新的对象，并共享于相关所有的测试方法以及 `AfterEach` 方法。
4. 当执行测试方法之前没有创建 `Vertx` 对象时，则会创建一个新的 `Vertx` 对象（仅仅作用于该方法本身）

[[_configuring_vertx_instances]]
==== 配置 `Vertx` 实例

默认情况下，`Vertx` 对象使用 `Vertx.vertx()` 创建，并使用 `Vertx` 的默认设置。但是，您可以配置 `VertxOptions` 以满足您的需要。
一个典型的应用场景是“扩展调试时阻塞超时警告”。为配置 `Vertx` 对象，您必须：

1. 创建一个带有 https://vertx.io/docs/apidocs/io/vertx/core/VertxOptions.html#VertxOptions-io.vertx.core.json.JsonObject-[json 格式] 的 `VertxOptions` 的 json 文件
2. 创建一个环境变量 `vertx.parameter.filename` 指向该文件

延长超时的配置文件示例：

[source,json]
{
 "blockedThreadCheckInterval" : 5,
 "blockedThreadCheckIntervalUnit" : "MINUTES",
 "maxEventLoopExecuteTime" : 360,
 "maxEventLoopExecuteTimeUnit" : "SECONDS"
}

当满足这些条件时， `Vertx` 对象创建时将使用配置中的参数 

[[_closing_and_removal_of_vertx_objects]]
==== 关闭和移除 `Vertx` 对象

注入的 `Vertx` 对象会自动被关闭并被移除其作用域。

例如，如果在一个测试方法的范围内创建一个 `Vertx` 对象，那么在该测试方法执行完之后，这个 `Vertx` 对象会被关闭。
相似地，当在 `@BeforeEach` 方法中创建 `Vertx` 对象时，它会在 `@AfterEach` 方法执行完之后被关闭。

[[_warning_on_multiple_methods_for_the_same_lifecycle_events]]
==== 同一生命周期事件下多方法的警告

JUnit 5 允许同一个生命周期事件之下存在多个方法。

例如，同一个测试可以定义3个 `@BeforeEach` 方法。
因为是异步操作，这些方法更可能是并行执行而不是串行执行，这有可能引起不确定的结果状态。

这是JUnit 5本身就存在的问题，而不属于 Vert.x JUnit5 模块范畴。如有疑问，也许您一直想知道的是，为什么单个方法不比多个方法更好。

[[_support_for_additional_parameter_types]]
== 对于其他额外参数类型的支持

Vert.x Unit 5 模块是可扩展的：
您可以通过 `link:../../apidocs/io/vertx/junit5/VertxExtensionParameterProvider.html[VertxExtensionParameterProvider]` 服务接口来添加更多的类型。

如果您在用RxJava 2，那么您可以注入一个 `io.vertx.reactivex.core.Vertx` （而非 `io.vertx.core.Vertx` ），这仅仅需要引入 `io.vertx:vertx-junit5-rx-java2` 依赖。
类似的，RxJava1则需要引入 `io.vertx:vertx-junit5-rx-java`

对于响应式库，您可以找到许多 `vertx-junit5` 的扩展库，
他们属于 `reactiverse-junit5-extensions` 项目，而且都整合了Vert.x技术栈，这些扩展库也正在进一步的发展：

[[_parameter_ordering]]
== 参数顺序

在某些情况下，可能必须将一个参数类型放置在另一个参数之前。
例如 Web Client 在 `vertx-junit5-extensions` 项目中会要求 `Vertx` 参数在 `WebClient` 参数之前。
这是因为只有 `Vertx` 参数存在的时候，才可以创建 `WebClient` 。

我们期望参数提供者抛出一些有意义的异常来让用户知道参数顺序的要求。

然而，任何情况下，我们都建议：将 `Vertx` 作为第一个参数，并按照您创建的顺序去声明后续参数。

[[_parameterized_tests_with_methodsource]]
== 用 `@MethodSource` 做参数化测试

您可以结合vertx-junit5，用 `@MethodSource` 做参数化测试。
因此，您需要在方法定义的vertx测试参数之前声明 method source 参数。

[source,java]
----
@ExtendWith(VertxExtension.class)
static class SomeTest {

  static Stream<Arguments> testData() {
    return Stream.of(
      Arguments.of("complex object1", 4),
      Arguments.of("complex object2", 0)
    );
  }

  @ParameterizedTest
  @MethodSource("testData")
   void test2(String obj, int count, Vertx vertx, VertxTestContext testContext) {
    // your test code
    testContext.completeNow();
  }
}
----

这同样适用于其它 `ArgumentSources` 。详见 https://junit.org/junit5/docs/current/api/org.junit.jupiter.params/org/junit/jupiter/params/ParameterizedTest.html[ParameterizedTest] 文档的 `Formal Parameter List` 一节。
